--- a/Template.SourceGenerator/Template.SourceGenerator.csproj
+++ b/Template.SourceGenerator/Template.SourceGenerator.csproj
@@ -19,6 +19,10 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Template.SourceGenerator.Attributes\Template.SourceGenerator.Attributes.csproj" />
+  </ItemGroup>
+
   <Target Name="PackBuildOutputs" DependsOnTargets="SatelliteDllsProjectOutputGroup;DebugSymbolsProjectOutputGroup">
     <ItemGroup>
       <TfmSpecificPackageFile Include="build\**" PackagePath="build" />
