--- a/Template.SourceGenerator/Template.SourceGenerator.csproj
+++ b/Template.SourceGenerator/Template.SourceGenerator.csproj
@@ -14,6 +14,13 @@
     <TargetsForTfmSpecificContentInPackage>$(TargetsForTfmSpecificContentInPackage);PackBuildOutputs</TargetsForTfmSpecificContentInPackage>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PackageId>Template.SourceGenerator</PackageId>
+    <Title>Template.SourceGenerator</Title>
+    <Description>Template source generator.</Description>
+    <PackageTags>sourcegenerator</PackageTags>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" PrivateAssets="all" />
