--- a/Template.SourceGenerator.Example/Template.SourceGenerator.Example.csproj
+++ b/Template.SourceGenerator.Example/Template.SourceGenerator.Example.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -17,7 +17,6 @@
   <Import Project="..\Template.SourceGenerator\build\Template.SourceGenerator.props" />
 
   <ItemGroup>
-    <ProjectReference Include="..\Template.SourceGenerator.Attributes\Template.SourceGenerator.Attributes.csproj" />
     <ProjectReference Include="..\Template.SourceGenerator\Template.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
