--- a/Template.SourceGenerator/Properties/launchSettings.json
+++ b/Template.SourceGenerator/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Template.SourceGenerator": {
       "commandName": "DebugRoslynComponent",
-      "targetProject": "..\\Template.SourceGenerator.Example\\Template.SourceGenerator.Example.csproj"
+      "targetProject": "..\\Develop\\Develop.csproj"
     }
   }
 }
